--- a/lab1/lab1/mainwindow.ui
+++ b/lab1/lab1/mainwindow.ui
@@ -123,7 +123,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="translateButton">
+         <widget class="QPushButton" name="translate_button">
           <property name="text">
            <string>Translate</string>
           </property>
@@ -249,7 +249,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="scaleButton">
+         <widget class="QPushButton" name="scale_button">
           <property name="text">
            <string>Scale</string>
           </property>
@@ -366,7 +366,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="rotateButton">
+         <widget class="QPushButton" name="rotate_button">
           <property name="text">
            <string>Rotate</string>
           </property>
@@ -394,30 +394,30 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionLoad"/>
-    <addaction name="actionSave"/>
+    <addaction name="action_load"/>
+    <addaction name="action_save"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionAbout"/>
+    <addaction name="action_about"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionLoad">
+  <action name="action_load">
    <property name="text">
     <string>Load</string>
    </property>
   </action>
-  <action name="actionSave">
+  <action name="action_save">
    <property name="text">
     <string>Save</string>
    </property>
   </action>
-  <action name="actionAbout">
+  <action name="action_about">
    <property name="text">
     <string>About</string>
    </property>
